# gz_model_importer_plugin

./: .gitignore  CMakeLists.txt  GzModelImporter.qrc  README.md  RobotImporterGui.qrc  package.xml
config/: gz_model_importer.config  gz_model_importer_gui.config  gz_model_importer_plugin.config
demo/: VALIDATION_CHECKLIST.md  importer_test_box.sdf
docs/: smoke_test.md
env-hooks/: gz_model_importer.sh.in  gz_model_importer_plugin.sh.in  robot_importer_gui.sh.in
gui/: FileSelectionPanel.qml  GzModelImporter.qml  ImportOptionsPanel.qml  ImporterStatusBar.qml  PreviewBar.qml  RobotImporterGui.qml
include/gz_model_importer/: FileLoader.hh  FileSelector.hh  GzSpawnClient.hh  ImportOptions.hh  ImporterBackend.hh  ImporterPlugin.hh  ImporterState.hh  InstanceRewriter.hh  ModelLoader.hh  PreviewController.hh  RuntimeHintAnalyzer.hh  SdfPreflightChecker.hh  SdfUriRewriter.hh  UrdfToSdf.hh  XacroExpander.hh
include/gz_model_importer_gui/: FileLoader.hh  FileSelector.hh  GzSpawnClient.hh  ImportOptions.hh  ImporterBackend.hh  ImporterPlugin.hh  ImporterState.hh  InstanceRewriter.hh  ModelLoader.hh  PreviewController.hh  RuntimeHintAnalyzer.hh  SdfPreflightChecker.hh  SdfUriRewriter.hh  UrdfToSdf.hh  XacroExpander.hh
include/robot_importer_gui/: FileLoader.hh  FileSelector.hh  GzSpawnClient.hh  ImportOptions.hh  ImporterBackend.hh  ImporterPlugin.hh  ImporterState.hh  InstanceRewriter.hh  LaunchGenerator.hh  ModelLoader.hh  PreviewController.hh  Ros2RuntimeAnalyzer.hh  RuntimeHintAnalyzer.hh  RuntimeProcessManager.hh  SdfPreflightChecker.hh  SdfUriRewriter.hh  UrdfToSdf.hh  XacroExpander.hh
launch/: gazebo_importer.launch.py
src/: FileLoader.cpp  FileSelector.cpp  GzSpawnClient.cpp  ImportOptions.cpp  ImporterBackend.cpp  ImporterPlugin.cpp  InstanceRewriter.cpp  LaunchGenerator.cpp  ModelLoader.cpp  PreviewController.cpp  Ros2RuntimeAnalyzer.cpp  RuntimeHintAnalyzer.cpp  RuntimeProcessManager.cpp  SdfPreflightChecker.cpp  SdfUriRewriter.cpp  UrdfToSdf.cpp  XacroExpander.cpp
test/models/: README.md  bridge_test.sdf  mesh_uri_test.urdf.xacro  minimal_sdf.sdf  sensor_test_bridge.yaml  sensor_test_robot.urdf.xacro  simple_box.urdf  xacro_mixed_args.urdf.xacro  xacro_with_defaults.urdf.xacro
test/worlds/: importer_test.sdf  robotnik_world.sdf
worlds/: gazebo_importer_default.sdf
