<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gz_model_importer_plugin</name>
  <version>0.1.0</version>
  <description>
    Gazebo Sim (Harmonic) GUI plugin: modal robot importer workflow.
    Supports URDF, XACRO and SDF inputs. Provides file selection,
    lightweight validation, optional 3-D preview on the main scene,
    instance name / ROS namespace / TF frame prefix options, and
    spawn into the active world with an optional standard ROS 2 launch entry point.
  </description>
  <maintainer email="asoriano@robotnik.es">Robotnik</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Gazebo Harmonic (Jazzy vendor packages) -->
  <depend>gz_gui_vendor</depend>
  <depend>gz_sim_vendor</depend>
  <depend>gz_msgs_vendor</depend>
  <depend>gz_transport_vendor</depend>
  <depend>sdformat_vendor</depend>

  <!-- ament_index_cpp: resolves package:// and model:// URIs via ament index -->
  <depend>ament_index_cpp</depend>

  <!-- xacro CLI used at runtime via QProcess -->
  <exec_depend>xacro</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
